# those_dicts

./: .gitignore  README.md  pyproject.toml
docs/: index.html
tests/: test_those_dicts.py
those_dicts/: __init__.py
