[tool.poetry]
name = "those-dicts"
version = "0.1.1"
description = "Those missing flavors of dict"
authors = ["Jakub Gajski <jakub.gajski@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jakubgajski/those_dicts"
keywords = ["graph", "batch", "two way", "dict", "dicts", "data structures", "lightweight"]
packages = [
    { include = "those_dicts" },
]


[tool.poetry.group.test]


[tool.poetry.dependencies]
python = "^3.9"
[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
